--- a/src/main/resources/templates/listeSupplements.html
+++ b/src/main/resources/templates/listeSupplements.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
- xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<link rel="stylesheet" type="text/css"
-href="webjars/bootstrap/4.3.1/css/bootstrap.min.css" />
-
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
+    <meta charset="utf-8">
     <title>Liste des Suppléments</title>
+    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.3.1/css/bootstrap.min.css" />
 </head>
 <body>
-	<div th:replace="template"></div>
-	<div class="container">
-	<div class="card">
-	 <div class="card-header">
-                Liste des Suppléments
-	 </div>
-            
-            <div class="card-body">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nom</th>
-                            <th>Dosage</th>
-                            <th>Prix</th>
-                            <th>Marque</th>
-                            <th>Date</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="s: ${supplements.content}">
-                            <td th:text="${s.idSupplement}"></td>
-                            <td th:text="${s.nomSupplement}"></td>
-                            <td th:text="${s.dosageSupplement}"></td>
-                            <td th:text="${s.prixSupplement}"></td>
-                            <td th:text="${s.marqueSupplement}"></td>
-                            <td th:text="${s.dateCreation}"></td>
-                            <td>
-                                <a class="btn btn-warning" th:href="@{/modifierSupplement(id=${s.idSupplement})}">Modifier</a>
-                                <a class="btn btn-danger" th:href="@{/supprimerSupplement(id=${s.idSupplement}, page=${currentPage}, size=${size})}" onclick="return confirm('Êtes-vous sûr?')">Supprimer</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <ul class="nav nav-pills">
-                    <li th:each="page, status: ${pages}">
-                        <a th:class="${status.index == currentPage} ? 'btn btn-primary' : 'btn btn-secondary'"
-                           th:href="@{/listeSupplements(page=${status.index}, size=${size})}"
-                           th:text="${status.index}"></a>
-                    </li>
-                </ul>
-            </div>
+<div th:replace="template"></div>
+<div class="container">
+    <div class="card">
+        <div class="card-header">
+            Liste des Suppléments
+        </div>
+        <div class="card-body">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nom</th>
+                        <th>Dosage</th>
+                        <th>Prix</th>
+                        <th>Marque</th>
+                        <th>Date</th>
+                        <th>Nutritional</th>
+                        <th sec:authorize="hasAnyAuthority('ADMIN','AGENT')">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="s: ${supplements.content}">
+                        <td th:text="${s.idSupplement}"></td>
+                        <td th:text="${s.nomSupplement}"></td>
+                        <td th:text="${s.dosageSupplement}"></td>
+                        <td th:text="${s.prixSupplement}"></td>
+                        <td th:text="${s.marqueSupplement}"></td>
+                        <td th:text="${s.dateCreation}"></td>
+                        <td th:if="${!#strings.isEmpty(s.nutritional)}" th:text="${s.nutritional.nomNutri}"></td>
+                        <td th:if="${#strings.isEmpty(s.nutritional)}" th:text="${'Pas de Nutritional'}"></td>
+                        <td sec:authorize="hasAnyAuthority('ADMIN','AGENT')">
+                            <a sec:authorize="hasAuthority('ADMIN')" class="btn btn-danger"
+                               onclick="return confirm('Êtes-vous sûr?')"
+                               th:href="@{/supprimerSupplement(id=${s.idSupplement},page=${currentPage},size=${size})}">
+                               Supprimer
+                            </a>
+                            <a sec:authorize="hasAnyAuthority('ADMIN')" class="btn btn-warning"
+                               th:href="@{/modifierSupplement(id=${s.idSupplement},page=${currentPage},size=${size})}">
+                               Modifier
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <ul class="nav nav-pills">
+                <li th:each="page, status: ${pages}">
+                    <a th:class="${status.index == currentPage} ? 'btn btn-primary' : 'btn btn-secondary'"
+                       th:href="@{/listeSupplements(page=${status.index},size=${size})}"
+                       th:text="${status.index}"></a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
